syntax = "proto3";

package frontend;

option go_package = "github.com/bgrewell/dtac-agent/api/grpc/go";

import "plugin.proto";

service AdapterService {
  rpc List (ListRequest) returns (ListResponse);
  rpc Call (plugin.EndpointRequestMessage) returns (plugin.EndpointResponseMessage);
}

message ListRequest {
}

message ListResponse {
  repeated plugin.PluginEndpoint endpoints = 1;
}